 4.54 => 4.55
2023-12-22

Balance :
 - All Starburst can target only Surface units

 4.53 => 4.54
2023-12-02

Improvment :
- Add T5 Zeppelin with new electro weapon

Balance :
 - Mongol / Antarion : Decrease range 1300=>1200. Decrease Damage 1400=>1200 / shot
 - Triton : Range 1400=>1200. Damage 360=>600
 - T1/T2 Rumad Medium Tank : Nerf some stats

 4.52 => 4.53
2023-11-19

Balance :
 - Mongol & Hellion Rumad : Decrease HP by 8%. Decrease Accuracy for lon,g range plasma.
 - Add New T2 Missile veh for RUMAD
 - Arm Tankanator : Reduce speed 1.2=>1.1. Decrease range 1300=>1200

Improvment :
- Add new weapon for Olympus.
- End of Halloween event

 4.51 => 4.52
2023-09-22

Balance :
 - ArmStratus buff (better dmg/s and better HP 35K=>42K)
 - Exo & Skrog morph with level 5 instead 4

 Improvment :
 - Rework Orco
 - Delete Furie Unit
 - Add T2 & T3 Static Antinuke for Rumad. Add mobile into Vehicle Lab
 - Exo T4 Arm : Change model & Balance. Morph from Orco or Furie
 - Add T1 Long Range Missile Turret for Gok
 - Add New Model for T5 Gok Lab
 - Add New T4 Fighter for GOK : Za'Kul
 - Add New T4 Morph for Gok Satan : Slanesh
 - Split T3 Kbot/Veh Rumad (with adding Antarion for Rumad Veh)

 Fix :
  - Rumad T3 Kbot Lab
  - Fix T5 Aeroship Dust. Add MountedWeaponAccelerator on.

 4.50 => 4.51
2023-08-04

Balance :
  - Increase cost for all Commanders
  - Commanders unlock tech for Geo & Nano Morph
  - Rework All Shield for T2/T3 Talon & Gok Commanders
  - Rework All Shield for T4 Arm / Core / Tll Commanders and T4 King Rumad

 4.49 => 4.50
2023-07-26

Balance :
 - All MountedWeaponAccelerator fix to 1500 range. (All T5, and independance)
 - Many T6 Titan Weapon decrease range 1700=>1600
 - Boost T1 plasma Kbot (speed, + 10%, Hp + 10%)

 4.48 => 4.49
2023-07-12

Balance :
 - Delete Silver Morph for T4 Talon
 - delete MainWeapon for independence Talon
 - Decrease BuidPower for all T3 Air Rez (1500=>1000)
 - Increase cost for all T3  Geo except for Core