@@ -4,8 +4,8 @@ return {
 		activatewhenbuilt = true,
 		brakerate = 0,
 		buildangle = 2048,
-		buildcostenergy = 392676,
-		buildcostmetal = 29408,
+		buildcostenergy = 392600,
+		buildcostmetal = 29400,
 		builder = false,
 		buildpic = "armgate1.dds",
 		buildtime = 350000,
@@ -112,19 +112,16 @@ return {
 		},
 		weapondefs = {
 			repulsor1 = {
-				craterareaofeffect = 0,
-				craterboost = 0,
-				cratermult = 0,
 				name = "PlasmaRepulsor",
 				range = 1000,
 				shieldbadcolor = "1 0.2 0.2 0.30",
-				shieldenergyuse = 3000,
+				shieldenergyuse = 2500,
 				shieldforce = 7,
 				shieldgoodcolor = "0.2 1 0.2 0.30",
 				shieldintercepttype = 1,
 				shieldpower = 60000,
-				shieldpowerregen = 300,
-				shieldpowerregenenergy = 3000,
+				shieldpowerregen = 250,
+				shieldpowerregenenergy = 2500,
 				shieldradius = 1000,
 				shieldrepulser = true,
 				smartshield = true,
@@ -132,10 +129,6 @@ return {
 				soundhitwetvolume = 0.5,
 				visibleshieldrepulse = true,
 				weapontype = "Shield",
-				damage = {
-					default = 100,
-					subs = 5,
-				},
 			},
 		},
 		weapons = {
