@@ -113,13 +113,13 @@ return {
 				name = "PlasmaRepulsor",
 				range = 700,
 				shieldbadcolor = "1 0.2 0.2 0.30",
-				shieldenergyuse = 1500,
+				shieldenergyuse = 1250,
 				shieldforce = 7,
 				shieldgoodcolor = "0.2 1 0.2 0.30",
 				shieldintercepttype = 1,
 				shieldpower = 30000,
-				shieldpowerregen = 150,
-				shieldpowerregenenergy = 1500,
+				shieldpowerregen = 125,
+				shieldpowerregenenergy = 1250,
 				shieldradius = 700,
 				shieldrepulser = true,
 				smartshield = true,
@@ -127,10 +127,6 @@ return {
 				soundhitwetvolume = 0.5,
 				visibleshieldrepulse = true,
 				weapontype = "Shield",
-				damage = {
-					default = 100,
-					subs = 5,
-				},
 			},
 		},
 		weapons = {
