@@ -59,7 +59,7 @@ return {
 			buildpic = "armpraet.dds",
 			faction = "ARM",
 			shield_emit_height = 60.0,
-			shield_power = 5000,
+			shield_power = 2500,
 			shield_radius = 230,
 			normaltex = "unittextures/arm_normals.dds",
 		},
@@ -179,25 +179,18 @@ return {
 			praetorian_shield = {
 				name = "Reflector Shield",
 				shieldbadcolor = "1 0.2 0.2 0.30",
-				shieldenergyuse = 500,
+				shieldenergyuse = 450,
 				shieldforce = 8,
 				shieldgoodcolor = "0.2 1 0.2 0.30",
 				shieldintercepttype = 1,
-				shieldpower = 5000,
-				shieldpowerregen = 50,
-				shieldpowerregenenergy = 500,
+				shieldpower = 2500,
+				shieldpowerregen = 45,
+				shieldpowerregenenergy = 450,
 				shieldradius = 230,
 				shieldrepulser = true,
 				smartshield = true,
-				soundhitwet = "sizzle",
-				soundhitwetvolume = 0.5,
 				visibleshieldrepulse = true,
 				weapontype = "Shield",
-				damage = {
-					default = 100,
-					subs = 5,
-				},
-				tracks = false,
 			},
 			k666blaster = {
 				areaofeffect = 16,
