@@ -117,13 +117,13 @@ return {
 				name = "PlasmaRepulsor",
 				range = 700,
 				shieldbadcolor = "1 0.2 0.2 0.30",
-				shieldenergyuse = 1500,
+				shieldenergyuse = 1250,
 				shieldforce = 7,
 				shieldgoodcolor = "0.2 1 0.2 0.30",
 				shieldintercepttype = 1,
 				shieldpower = 30000,
-				shieldpowerregen = 150,
-				shieldpowerregenenergy = 1500,
+				shieldpowerregen = 125,
+				shieldpowerregenenergy = 1250,
 				shieldradius = 700,
 				shieldrepulser = true,
 				smartshield = true,
