@@ -124,13 +124,13 @@ return {
 			repulsor2 = {
 				name = "Plasma Repulsor",
 				shieldbadcolor = "1 0.2 0.2 0.30",
-				shieldenergyuse = 2500,
+				shieldenergyuse = 1250,
 				shieldforce = 8,
 				shieldgoodcolor = "0.2 1 0.2 0.30",
 				shieldintercepttype = 1,
 				shieldpower = 30000,
-				shieldpowerregen = 250,
-				shieldpowerregenenergy = 2500,
+				shieldpowerregen = 125,
+				shieldpowerregenenergy = 1250,
 				shieldradius = 500,
 				shieldrepulser = true,
 				smartshield = true,
