@@ -19,7 +19,7 @@ return {
 		collisionvolumetype = "CylY",
 		corpse = "dead",
 		defaultmissiontype = "Standby",
-		description = "Experimental High Power Kbot - Absorb Shield (25K) (Amphibious)",
+		description = "Experimental High Power Kbot - Reflect Shield (25K) (Amphibious)",
 		energystorage = 10000,
 		explodeas = "EXO_BLAST",
 		firestandorders = 1,
@@ -217,23 +217,18 @@ return {
 			shield = {
 				name = "Universal Repulsor",
 				shieldbadcolor = "1 0.2 0.2 0.30",
-				shieldenergyuse = 3000,
+				shieldenergyuse = 2500,
 				shieldforce = 8,
 				shieldgoodcolor = "0.9 0.9 0.45 0.35",
 				shieldintercepttype = 31,
 				shieldpower = 10000,
-				shieldpowerregen = 150,
-				shieldpowerregenenergy = 3000,
+				shieldpowerregen = 125,
+				shieldpowerregenenergy = 2500,
 				shieldradius = 250,
 				shieldrepulser = true,
 				smartshield = true,
 				visibleshieldrepulse = true,
 				weapontype = "Shield",
-				damage = {
-					default = 100,
-					subs = 5,
-				},
-				tracks = false,
 			},
 		},
 		weapons = {
