@@ -60,7 +60,7 @@ return {
 			buildpic = "talon_boxer.dds",
 			faction = "ARM",
 			shield_emit_height = 60.43,
-			shield_power = 2600,
+			shield_power = 2500,
 			shield_radius = 230,
 			normaltex = "unittextures/talon_normals.dds",
 		},
@@ -131,30 +131,20 @@ return {
 		},
 		weapondefs = {
 			shield = {
-				craterareaofeffect = 0,
-				craterboost = 0,
-				cratermult = 0,
-				name = "Praetorian_Shield",
+				name = "Reflector Shield",
 				shieldbadcolor = "1 0.2 0.2 0.30",
-				shieldenergyuse = 350,
+				shieldenergyuse = 450,
 				shieldforce = 8,
 				shieldgoodcolor = "0.2 1 0.2 0.30",
 				shieldintercepttype = 1,
-				shieldpower = 2600,
-				shieldpowerregen = 29,
-				shieldpowerregenenergy = 260,
+				shieldpower = 2500,
+				shieldpowerregen = 45,
+				shieldpowerregenenergy = 450,
 				shieldradius = 230,
 				shieldrepulser = true,
 				smartshield = true,
-				soundhitwet = "sizzle",
-				soundhitwetvolume = 0.5,
 				visibleshieldrepulse = true,
 				weapontype = "Shield",
-				damage = {
-					default = 100,
-					subs = 5,
-				},
-				tracks = false,
 			},
 			gatling = {
 				accuracy = 10,
