@@ -120,13 +120,13 @@ return {
 				name = "PlasmaRepulsor",
 				range = 1000,
 				shieldbadcolor = "1 0.2 0.2 0.30",
-				shieldenergyuse = 3000,
+				shieldenergyuse = 2500,
 				shieldforce = 7,
 				shieldgoodcolor = "0.2 1 0.2 0.30",
 				shieldintercepttype = 1,
 				shieldpower = 60000,
-				shieldpowerregen = 300,
-				shieldpowerregenenergy = 3000,
+				shieldpowerregen = 250,
+				shieldpowerregenenergy = 2500,
 				shieldradius = 1000,
 				shieldrepulser = true,
 				smartshield = true,
