@@ -120,19 +120,16 @@ return {
 		},
 		weapondefs = {
 			repulsor3 = {
-				craterareaofeffect = 0,
-				craterboost = 0,
-				cratermult = 0,
-				name = "PlasmaRepulsor",
+				name = "Plasma Repulsor",
 				range = 2200,
 				shieldbadcolor = "1 0.2 0.2 0.30",
-				shieldenergyuse = 30000,
+				shieldenergyuse = 32000,
 				shieldforce = 7,
 				shieldgoodcolor = "0.2 1 0.2 0.30",
 				shieldintercepttype = 1,
 				shieldpower = 450000,
-				shieldpowerregen = 3000,
-				shieldpowerregenenergy = 30000,
+				shieldpowerregen = 1600,
+				shieldpowerregenenergy = 32000,
 				shieldradius = 2200,
 				shieldrepulser = true,
 				smartshield = true,
@@ -140,10 +137,6 @@ return {
 				soundhitwetvolume = 0.5,
 				visibleshieldrepulse = true,
 				weapontype = "Shield",
-				damage = {
-					default = 100,
-					subs = 5,
-				},
 			},
 		},
 		weapons = {
