@@ -79,19 +79,16 @@ return {
 		},
 		weapondefs = {
 			repulsor = {
-				craterareaofeffect = 0,
-				craterboost = 0,
-				cratermult = 0,
 				name = "PlasmaRepulsor",
 				range = 400,
 				shieldbadcolor = "1 0.2 0.2 0.35",
-				shieldenergyuse = 600,
+				shieldenergyuse = 750,
 				shieldforce = 7,
 				shieldgoodcolor = "0.2 1 0.2 0.35",
 				shieldintercepttype = 1,
 				shieldpower = 7500,
-				shieldpowerregen = 150,
-				shieldpowerregenenergy = 562.5,
+				shieldpowerregen = 75,
+				shieldpowerregenenergy = 750,
 				shieldradius = 400,
 				shieldrepulser = true,
 				smartshield = true,
