@@ -103,9 +103,6 @@ return {
 		},
 		weapondefs = {
 			repulsor = {
-				craterareaofeffect = 0,
-				craterboost = 0,
-				cratermult = 0,
 				name = "PlasmaRepulsor",
 				range = 400,
 				shieldbadcolor = "1 0.2 0.2 0.35",
