@@ -175,15 +175,15 @@ return {
 				},
 			},
 			tllirritator_shield = {
-				name = "PersonalShield",
-				shieldbadcolor = "1 0.2 0.2 0.35",
-				shieldenergyuse = 300,
+				name = "Reflector Shield",
+				shieldbadcolor = "1 0.2 0.2 0.30",
+				shieldenergyuse = 375,
 				shieldforce = 8,
-				shieldgoodcolor = "0.2 1 0.2 0.35",
+				shieldgoodcolor = "0.2 1 0.2 0.30",
 				shieldintercepttype = 1,
 				shieldpower = 2000,
-				shieldpowerregen = 30,
-				shieldpowerregenenergy = 300,
+				shieldpowerregen = 37.5,
+				shieldpowerregenenergy = 375,
 				shieldradius = 150,
 				shieldrepulser = true,
 				smartshield = true,
@@ -191,10 +191,6 @@ return {
 				soundhitwetvolume = 0.5,
 				visibleshieldrepulse = true,
 				weapontype = "Shield",
-				damage = {
-					default = 100,
-				},
-				tracks = false,
 			},
 			minigun_gauss_tll = {
 				alphaDecay = 0.5,
